# ProjetoIA

./: .gitignore  pyproject.toml
LUNA/: Luna.py  Processor.py  database.py  nlp_pipeline.py
