[tool.poetry]
name = "ProjetoLuna"
version = "0.1.0"
description = ""
authors = ["Matheus Galvao <matheusgalvaoangelo@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
spacy = "^3.7.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
